--- a/main.css
+++ b/main.css
@@ -421,7 +421,7 @@ a{
     background-color: var(--main-black);
 }
 .category_name_wrap{
-    top: 67px;
+    top: 72px;
     padding: 5px 0;
     animation: right_left var(--category-frame-time) ease-out;
 }
@@ -483,6 +483,10 @@ a{
     gap: 40px;
     opacity: 0;
 }
+.project_wrap_position{
+    top: 190px;
+    padding: 0 10px 0;
+}
 .project_card{
     width: 100%;
     height: 232px;
@@ -505,12 +509,8 @@ a{
     transform-style: preserve-3d;
 }
 .project_image{
-    max-width: 350px;
+    max-width: 100%;
     border-radius: var(--border-radius);
-    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
-    /* box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
-    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     object-fit: cover;
 }
@@ -591,6 +591,18 @@ footer{
 }
 
 /* responsive css */
+@media only screen and (max-width: 1149px){
+    .category_name, .project_head{
+        font-size: 20px;
+        letter-spacing: 8px;
+    }
+    .industry_tabs{
+        justify-content: center;
+    }
+    .industry_tab{
+        font-size: 14px;
+    }
+}
 @media only screen and (max-width: 1023px){
     /* header */
     .header_container{
@@ -696,8 +708,30 @@ footer{
         font-size: 40px;
         line-height: 1;
     }
+    /* categories */
+    .project_cards_wrap{
+        gap: 20px;
+    }
+    .project_card{
+        max-width: 230px;
+        height: 153px;
+    }
+    .category_name, .project_head{
+        font-size: 18px;
+        letter-spacing: 6px;
+    }
+    .industry_tab{
+        font-size: 14px;
+    }
 }
 @media only screen and (max-width: 500px){
+    /* header */
+    .logo{
+        font-size: 24px;
+    }
+    .logo_full{
+        font-size: 12px;
+    }
     /* hero */
     .hero_wrap{
         height: 100svh;
@@ -751,6 +785,13 @@ footer{
     }
     .client img{
         max-width: 170px;
+    }
+    /* categories */
+    .category_name, .project_head{
+        font-size: 16px;
+    }
+    .industry_tab{
+        font-size: 12px;
     }
 }
 @media only screen and (max-width: 400px){
@@ -812,6 +853,28 @@ footer{
             box-shadow: 0 0 4px 6px rgba(76, 175, 80, 0.4);
         }
     }
+    /* categories */
+    .category_name_wrap{
+        top: 59px;
+    }
+    .category_name, .project_head{
+        font-size: 14px;
+    }
+    .industry_tabs{
+        position: fixed;
+        z-index: 1;
+        top: 90px;
+        padding: 10px 0;
+        background-color: #FFFFFF;
+    }
+    .industry_tab{
+        text-align: center;
+        font-size: 11px;
+        padding: 6px 8px;
+    }
+    .project_wrap_position{
+        top: 160px;
+    }
 }
 
 /* active classes */
@@ -825,10 +888,6 @@ footer{
 .project_wrap_active{
     opacity: 1;
     display: flex;
-}
-.project_wrap_position{
-    top: 190px;
-    padding: 0 10px 50px;
 }
 .project_card_active{
     transform: rotateY(180deg);
