--- a/main.css
+++ b/main.css
@@ -203,7 +203,7 @@ a{
     font-size: 22px;
     letter-spacing: 1.2px;
     z-index: 1;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -264,6 +264,7 @@ a{
 }
 .key_project{
     display: flex;
+    align-items: flex-end;
     gap: 0 40px;
 }
 .key_project_left{
@@ -306,13 +307,14 @@ a{
 .key_project_time{
     font-size: 14px;
     letter-spacing: 0.6px;
-    margin: 5px 0 30px;
+    margin: 5px 0 18px;
     letter-spacing: 0.5px;
     text-transform: capitalize;
 }
 .key_project_desc{
     font-size: 18px;
-    margin: 0 0 40px;
+    font-weight: 300;
+    margin: 0 0 18px;
     letter-spacing: 0.3px;
     line-height: 1.6;
 
@@ -344,7 +346,7 @@ a{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 20px 0;
+    gap: 4px 0;
 }
 .v2_key_points .key_point{
     flex-basis: 50%;
@@ -455,7 +457,7 @@ a{
     left: 50%;
     transform: translateX(-50%);
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     gap: 0 10px;
 }
 .industry_tab{
@@ -463,7 +465,7 @@ a{
     opacity: 0;
     transition: transform 1.5s, background-color 0.5s;
     transform: scale(0);
-    border: 1px solid;
+    /* border-right: 1px solid; */
     border-radius: var(--border-radius);
     cursor: pointer;
     text-transform: capitalize;
