--- a/main.css
+++ b/main.css
@@ -648,7 +648,9 @@ p.industry_tab:nth-last-child(1){
 }
 /* footer *********************************************/
 footer{
+    position: relative;
     padding: 20px 0;
+    z-index: 1;
     background-color: var(--main-black);
 }
 .footer_container{
