--- a/main.css
+++ b/main.css
@@ -548,7 +548,7 @@ p.industry_tab:nth-last-child(1){
     align-items: center;
     font-size: 18px;
     padding: 10px 20px;
-    border: 1px solid;
+    /* border: 1px solid; */
     border-radius: var(--border-radius);
     transition: 0.3s all;
 }
