--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ a{
     color: var(--main-black);
 }
 .hero_head{
-    font-size: 54px;
+    font-size: 45px;
     font-weight: 600;
     max-width: 600px;
     margin: 10px 0 50px;
@@ -615,6 +615,10 @@ p.industry_tab:nth-last-child(1){
 }
 .team_card, .member_photo{
     border-radius: var(--border-radius);
+}
+.intern_cards{
+    justify-content: flex-start;
+    gap: 0 60px;
 }
 .member_photo{
     width: 100%;
