--- a/main.css
+++ b/main.css
@@ -796,9 +796,48 @@ footer{
     }
 }
 @media only screen and (max-width: 1023px){
+    /* mobile menu */
+    .mobile_menu{
+
+        position: absolute;
+        top: 80px;
+        width: 100%;
+        /* height: 300px; */
+        height: 0;
+        border-radius: 0 0 10px 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px 0;
+        transition: 0.3s all;
+        background-color: #FFFFFF;
+        box-shadow: var(--box-shadow);
+    }
+    .mob_menu_link{
+        opacity: 0;
+        font-size: 30px;
+    }
+    .mob_menu_icon{
+        font-size: 40px;
+        font-weight: 600;
+    }
+    .menu_close_icon{
+        display: none;
+    }
+    .mob_menu_active{
+        height: 300px;
+    }
+    .show_mob_menu_link{
+        opacity: 1;
+    }
     /* header */
     .header_container{
         justify-content: center;
+        gap: 0 10px;
+    }
+    .mob_menu_icon{
+        font-size: 40px;
     }
     .logo_wrap{
         text-align: center;
@@ -956,6 +995,12 @@ footer{
     }
 }
 @media only screen and (max-width: 500px){
+    .mobile_menu{
+        top: 72px;
+    }
+    .mob_menu_link{
+        font-size: 25px;
+    }
     /* header */
     .logo{
         font-size: 24px;
@@ -1139,6 +1184,10 @@ footer{
     }
     .project_desc{
         font-size: 14px;
+    }
+    .mob_menu_icon{
+        font-size: 40px;
+        font-weight: 600;
     }
 }
 
