--- a/main.css
+++ b/main.css
@@ -73,14 +73,41 @@ a{
     display: flex;
     gap: 0 10px;
 }
-.nav_links{
+.nav_links, .internal_industries{
     font-size: 18px;
     padding: 10px;
+    text-transform: capitalize;
 }
 .nav_links:hover{
     text-decoration: underline;
     text-decoration-color: var(--main-green);
     text-decoration-thickness: 3px;
+}
+.internal_industries{
+    position: relative;
+    cursor: pointer;
+}
+.industries_links{
+    display: none;
+    position: absolute;
+    top: 40px;
+    left: -70px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px 0;
+    cursor: pointer;
+    border: 1px solid var(--main-green);
+    border-top: none;
+    background-color: #fff;
+    padding: 10px;
+    width: 250px;
+    z-index: 3;
+}
+.industry_links{
+    cursor: pointer;
+}
+.industry_links:hover{
+    text-decoration: underline var(--main-green) 3px;
 }
 
 
@@ -231,9 +258,7 @@ a{
     color: #FFFFFF;
 }
 .sticky_industry:hover{
-    text-decoration: underline;
-    text-decoration-color: var(--main-green);
-    text-decoration-thickness: 3px;
+    text-decoration: underline var(--main-green) 3px;
 }
 
 /* key projects */
@@ -352,7 +377,6 @@ a{
     justify-content: center;
     align-items: center;
     width: 100%;
-    z-index: 1;
     background-color: var(--main-black);
 }
 .category_name_wrap{
@@ -1206,4 +1230,7 @@ footer{
 .industryTabActive{
     color: #FFFFFF;
     background-color: var(--main-green);
+}
+.show_industry_links{
+    display: flex;
 }
