--- a/main.css
+++ b/main.css
@@ -55,14 +55,10 @@ a{
     align-items: center;
 }
 .logo_wrap{
-    padding: 10px;
+    padding: 10px 0 0;
 }
 .logo{
-    font-family: 'fff_tusjbold';
-    font-size: 30px;
-    background: linear-gradient(to right, var(--main-green) 0, var(--main-black) 50%);    line-height: 1;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    max-width: 160px;
 }
 .logo_full{
     font-size: 14px;
@@ -377,6 +373,7 @@ a{
     justify-content: center;
     align-items: center;
     width: 100%;
+    z-index: 1;
     background-color: var(--main-black);
 }
 .category_name_wrap{
