--- a/main.css
+++ b/main.css
@@ -238,7 +238,7 @@ a{
     justify-content: center;
     gap: 0 20px;
     transition: 0.5s all linear;
-    background-color: #000000;
+    background-color: var(--main-black);
 }
 .sticky_industry{
     /* text-decoration: underline; */
@@ -794,6 +794,12 @@ footer{
 
 /* responsive css */
 @media only screen and (max-width: 1149px){
+    .industry_card{
+        max-width: 235px;
+    }
+    .key_project_main_image{
+        max-width: 600px;
+    }
     .category_name, .project_head{
         font-size: 20px;
         letter-spacing: 8px;
@@ -808,9 +814,10 @@ footer{
         display: inline;
     }
     .mobile_menu{
-        position: absolute;
-        top: 80px;
+        position: fixed;
+        top: 110px;
         width: 100%;
+        z-index: 4;
         /* height: 300px; */
         height: 0;
         border-radius: 0 0 10px 10px;
@@ -824,7 +831,7 @@ footer{
         /* box-shadow: var(--box-shadow); */
     }
     .category_mobile_menu{
-        top: 107px;
+        top: 70px;
     }
     .mob_menu_link{
         visibility: hidden;
@@ -852,7 +859,7 @@ footer{
     /* header */
     .header_container{
         justify-content: center;
-        gap: 0 10px;
+        gap: 0 30px;
     }
     .mob_menu_icon{
         font-size: 40px;
@@ -888,24 +895,34 @@ footer{
         background-color: rgba(255, 255, 255, 0.7);
     }
     /* key projects */
+    .key_projects_wrap{
+        gap: 80px 0;
+    }
     .key_project{
         flex-direction: column;
         align-items: center;
-        gap: 40px 0;
+        gap: 10px 0;
     }
     .key_project_left{
         order: -1;
     }
     .key_project_main_image{
-        max-width: 100%;
+        max-width: 500px;
     }
     .key_project_right{
         text-align: center;
         max-width: 650px;
     }
     .key_project_name{
+        font-size: 30px;
         max-width: max-content;
         margin: 0 auto;
+    }
+    .ongoing_project{
+        top: 20px;
+    }
+    .key_project_time{
+        margin: 5px 0 10px;
     }
     .v2_key_points{
         max-width: 500px;
@@ -913,14 +930,38 @@ footer{
         text-align: initial;
         flex-direction: row;
     }
+    .team_card{
+        max-width: 170px;
+        align-items: initial;
+    }
+    .member_photo{
+        max-width: 150px;
+    }
+    .associates_wrap{
+        justify-content: space-evenly;
+    }
+    .member_name, .associate_name{
+        font-size: 16px;
+    }
+    .member_role, .associate_role{
+        font-size: 12px;
+    }
+    .member_enad{
+        right: 15px;
+        font-size: 8px;
+    }
+    .enad_time{
+        font-size: 16px;
+    }
     .footer_links_head_wrap{
         display: none;
     }
     .footer_top{
+        font-size: 14px;
         justify-content: center;
     }
     .copyright_social{
-        justify-content: center;
+        font-size: 14px;
     }
     /* about */
     .team_cards{
@@ -961,12 +1002,18 @@ footer{
         font-size: 12px;
     }
     /* key projects */
+    .key_project_main_image{
+        max-width: 100%;
+    }
     .key_projects_head{
         font-size: 40px;
         margin: 0 0 40px;
     }
     .key_project{
         gap: 10px 0;
+    }
+    .key_project_desc{
+        font-size: 16px;
     }
     .v2_key_points{
         gap: 10px 0;
@@ -979,10 +1026,6 @@ footer{
         line-height: 1;
     }
     /* categories */
-    .category_name, .project_head{
-        font-size: 18px;
-        letter-spacing: 6px;
-    }
     .project_cards_wrap{
         gap: 20px;
     }
@@ -995,10 +1038,12 @@ footer{
         justify-content: center;
         gap: 30px;
     }
+    .associate_name{
+        font-size: 18px;
+    }
     .footer_top{
-        flex-direction: column;
-        align-items: center;
-        gap: 20px 0;
+        justify-content: space-between;
+        gap: 0 20px;
     }
     .footer_logo_wrap, .footer_info{
         text-align: center;
@@ -1011,11 +1056,12 @@ footer{
     .footer_contact{
         max-width: 250px;
     }
-    .icon_contact{
-        justify-content: center;
+    .copyright_social{
+        font-size: 14px;
     }
 }
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 512px){
+    /* mobile menu */
     .mobile_menu{
         top: 70px;
     }
@@ -1036,12 +1082,14 @@ footer{
     .logo_full{
         font-size: 12px;
     }
-    .hero_head{
-        font-size: 30px;
-    }
     /* industries */
     .sticky_industries{
-        display: none;
+        flex-wrap: wrap;
+        top: -80px;
+    }
+    .sticky_industry{
+        font-size: 14px;
+        line-height: 24px;
     }
     .industries{
         padding: 50px 0;
@@ -1076,15 +1124,13 @@ footer{
         font-size: 28px;
     }
     .ongoing_project{
-        top: 10px;
-        left: -26px;
+        top: 18px;
+        left: -30px;
     }
     .key_project_time{
         font-size: 16px;
-        margin: 5px 0 20px;
     }
     .key_project_desc{
-        font-size: 20px;
         margin: 0 0 20px;
         line-height: 1.5;
     }
@@ -1095,12 +1141,6 @@ footer{
         max-width: 170px;
     }
     /* categories */
-    .category_name_wrap{
-        top: 62px;
-    }
-    .category_name, .project_head{
-        font-size: 16px;
-    }
     .industry_tabs{
         position: fixed;
         z-index: 1;
@@ -1115,11 +1155,29 @@ footer{
     .project_desc{
         font-size: 16px;
     }
+    .footer_top{
+        font-size: 14px;
+    }
+    .copyright_social{
+        font-size: 12px;
+    }
+    .about_main_head{
+        font-size: 24px;
+    }
+    .about_text{
+        font-size: 18px;
+    }
+    /* footer */
+    .footer_top{
+        flex-direction: column;
+        align-items: center;
+        gap: 30px 0;
+    }
 }
 @media only screen and (max-width: 400px){
     /* hero */
     .hero_head{
-        font-size: 32px;
+        font-size: 29px;
         line-height: 1.4;
     }
     .hero_cta{
@@ -1144,7 +1202,13 @@ footer{
     .hospital_healthcare{
         top: 30%;
     }
+    .industry_cta .material-symbols-outlined{
+        font-size: 20px;
+    }
     /* key projects */
+    .key_project_main_image{
+        max-width: 100%;
+    }
     .key_project_desc{
         text-align: center;
     }
@@ -1158,10 +1222,8 @@ footer{
         font-size: 20px;
     }
     .ongoing_project{
-        width: 7px;
-        height: 7px;
-        left: -18px;
-        top: 12px;
+        left: -30px;
+        top: 17px;
     }
     .client_head{
         font-size: 30px;
@@ -1178,16 +1240,6 @@ footer{
         }
     }
     /* categories */
-    .category_name_wrap{
-        top: 59px;
-    }
-    .category_name, .project_head{
-        font-size: 14px;
-    }
-    .hospitality_head{
-        font-size: 12px;
-        letter-spacing: 2.2px;
-    }
     .industry_tabs{
         top: 90px;
     }
@@ -1213,9 +1265,34 @@ footer{
     .project_desc{
         font-size: 14px;
     }
+    .team_card{
+        max-width: 160px;
+    }
+    .member_photo{
+        max-width: 100%;
+    }
+    .member_enad{
+        font-size: 9px;
+    }
+    .enad_time{
+        font-size: 16px;
+    }
+    .member_name, .associate_name{
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .member_role, .associate_role{
+        font-size: 14px;
+    }
     .mob_menu_icon{
         font-size: 40px;
         font-weight: 600;
+    }
+    .copyright_social{
+        flex-direction: column;
+        align-items: center;
+        gap: 10px 0;
+        font-size: 14px;
     }
 }
 
