--- a/main.css
+++ b/main.css
@@ -112,10 +112,14 @@ a{
     display: flex;
     align-items: center;
     border-radius: var(--border-radius);
-    background: url('assets/atf_bg.jpeg') no-repeat;
+    background: url('assets/atf-backgrounds/wave_v1.svg') no-repeat;
     background-size: cover;
+    background-position: left bottom;
 }
 .hero_container{
+    display: flex;
+    justify-content: center;
+    gap: 0 40px;
     opacity: 0;
     transition: 0.7s all;
 }
@@ -134,6 +138,9 @@ a{
     line-height: 1.2;
     letter-spacing: 1px;
     color: var(--main-black);
+}
+.atf_image img{
+    max-width: 400px;
 }
 .hero_cta{
     display: inline-flex;
@@ -813,13 +820,13 @@ footer{
     .mobile_menu_btn, .mobile_menu{
         display: inline;
     }
-    .mobile_menu{
+    /* main, industries menu */
+    .mobile_menu, .industries_mobile_menu{
         position: fixed;
-        top: 110px;
+        top: 80px;
         width: 100%;
-        z-index: 4;
-        /* height: 300px; */
         height: 0;
+        z-index: 4;
         border-radius: 0 0 10px 10px;
         display: flex;
         flex-direction: column;
@@ -828,26 +835,49 @@ footer{
         gap: 20px 0;
         transition: 0.3s all;
         background-color: #FFFFFF;
-        /* box-shadow: var(--box-shadow); */
+    }
+    .industries_mobile_menu{
+        width: 100%;
+        height: 300px;
+        right: -400px;
+        top: 62px;
+        z-index: 5;
+        transition: 0.5s right;
     }
     .category_mobile_menu{
         top: 70px;
     }
-    .mob_menu_link{
+    /* main menu links, industry menu links */
+    .mob_menu_link, .mob_indus_link, .industries_mob_link{
         visibility: hidden;
+        position: relative;
         opacity: 0;
         font-size: 30px;
         transition: 0.5s all;
     }
+    .mob_indus_link{
+        visibility: visible;
+        opacity: 1;
+    }
+    .more_links{
+        position: absolute;
+        top: 5px;
+        right: -50px;
+    }
+    .go_back_indus{
+        position: absolute;
+        top: 20px;
+        left: 30px;
+    }
+    /* menu icon */
     .mob_menu_icon{
         display: none;
         font-size: 40px;
-        font-weight: 600;
     }
     /* mobile menu active */
     .mob_menu_active{
         visibility: visible;
-        height: 280px;
+        height: 300px;
     }
     .show_mob_menu_link{
         visibility: visible;
@@ -974,9 +1004,6 @@ footer{
     }
 }
 @media only screen and (max-width: 768px){
-    .mob_menu_active{
-        height: 260px;
-    }
     /* hero */
     .hero_head{
         font-size: 36px;
@@ -1072,14 +1099,11 @@ footer{
     .mobile_menu{
         top: 70px;
     }
-    .mob_menu_active{
-        height: 230px;
-    }
     .category_mobile_menu{
         top: 95px;
         z-index: 2;
     }
-    .mob_menu_link{
+    .mob_menu_link, .industries_mob_link, .mob_indus_link{
         font-size: 25px;
     }
     /* header */
@@ -1325,7 +1349,6 @@ footer{
     }
     .mob_menu_icon{
         font-size: 40px;
-        font-weight: 600;
     }
     .copyright_social{
         flex-direction: column;
@@ -1359,4 +1382,7 @@ footer{
 }
 .show_industry_links{
     display: flex;
+}
+.show_industry_mob_links{
+    right: 0;
 }
