--- a/main.css
+++ b/main.css
@@ -839,7 +839,7 @@ footer{
     .industries_mobile_menu{
         width: 100%;
         height: 300px;
-        right: -400px;
+        right: -100%;
         top: 62px;
         z-index: 5;
         transition: 0.5s right;
@@ -901,12 +901,18 @@ footer{
         display: none;
     }
     /* hero */
+    .hero{
+        height: 80vh;
+    }
     .hero_container{
         text-align: center;
     }
     .hero_head{
-        font-size: 44px;
+        font-size: 30px;
         margin: 10px auto 50px;
+    }
+    .atf_image img{
+        max-width: 300px;
     }
     /* industries */
     .industry_card{
@@ -1005,8 +1011,9 @@ footer{
 }
 @media only screen and (max-width: 768px){
     /* hero */
-    .hero_head{
-        font-size: 36px;
+    .hero_container{
+        flex-direction: column;
+        gap: 50px 0;
     }
     /* industries */
     .industry_card_wrap{
@@ -1113,6 +1120,10 @@ footer{
     .logo_full{
         font-size: 12px;
     }
+    /* hero */
+    .hero_head{
+        font-size: 26px;
+    }
     /* industries */
     .sticky_industries{
         flex-wrap: wrap;
@@ -1215,13 +1226,16 @@ footer{
 @media only screen and (max-width: 400px){
     /* hero */
     .hero_head{
-        font-size: 29px;
+        font-size: 24px;
         line-height: 1.4;
     }
     .hero_cta{
         font-size: 20px;
         max-width: 180px;
         height: 48px;
+    }
+    .atf_image img{
+        max-width: 250px;
     }
     /* industries */
     .industry_card_wrap{
