--- a/main.css
+++ b/main.css
@@ -727,7 +727,7 @@ footer{
 .footer_bottom{
     padding: 10px 0 0;
     margin: 20px 0 0;
-    border-top: 1px solid var(--light-green);
+    border-top: 1px solid var(--main-green);
 }
 .copyright_social{
     display: flex;
